# pcc

./: LICENSE  README.md  _CoqProject  coq-pcc.opam  dune-project  meta.yml
.github/workflows/: coq-ci.yml
coq/: pen_and_paper.tex
coq/pcc/: Makefile  expressions_assertions.v  java_basic_defs.v  list_utils.v  pcc4irm.v  program_model.v  security_defs.v  semantics_assertions.v  temp.v  temp2.v
theories/: dune  expressions_assertions.v  java_basic_defs.v  list_utils.v  pcc4irm.v  program_model.v  security_defs.v  semantics_assertions.v  temp.v  temp2.v  validity.v  weakest_precondition.v
