opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/palmskog/pcc"
dev-repo: "git+https://github.com/palmskog/pcc.git"
bug-reports: "https://github.com/palmskog/pcc/issues"
license: "MIT"

synopsis: "Coq formalization of a proof carrying code framework for inlined reference monitors in Java bytecode"
description: """
A light-weight approach for certification of monitor inlining for
sequential Java bytecode using proof-carrying code, formalized in Coq."""

build: ["dune" "build" "-p" name "-j" jobs]
depends: [
  "dune" {>= "2.5"}
  "coq" {(>= "8.10" & < "8.13~") | (= "dev")}
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs of algorithms"
  "keyword:proof-carrying code"
  "keyword:Java"
  "keyword:bytecode"
  "logpath:PCC"
]
authors: [
  "Andreas Lundblad"
  "Karl Palmskog"
]
